# tock-2025-analysis

./: .gitignore  05-calc-link.py  06-calc-clocks.py  07-proc-clocks.py  README.md  pyproject.toml  rclone-from-nextcloud.sh
Tides/: calc-tides.py
Tides/INRIM-displacement/: groundwater.app_pygtide.csv  groundwater.app_readme.txt
Tides/INRIM-potential/: .~lock.groundwater.app_pygtide.csv#  groundwater.app_pygtide.csv  groundwater.app_readme.txt  groundwater.app_wavegroups.csv
Tides/PTB-displacement/: groundwater.app_pygtide.csv  groundwater.app_readme.txt
Tides/PTB-potential/: groundwater.app_pygtide.csv  groundwater.app_readme.txt
