[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
ruff = "^0.5.4"
ipython = "^8.26.0"
tintervals = "^0.2.0"
allantools = "^2024.6"
uncertainties = "^3.2.2"
statsmodels = "^0.14.4"
cartopy = "^0.24.1"
geopy = "^2.4.1"

